--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "babel-preset-taro": "4.1.9",
     "eslint": "^8.57.0",
     "eslint-config-taro": "4.1.9",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.4.0",
     "husky": "^9.1.7",
