--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
       "require": "./dist/index.cjs",
       "types": "./dist/index.d.ts"
     },
-    "./style.css": "./dist/style.css",
-    "./style.scss": "./src/VirtualSwiper.scss"
+    "./style.css": "./dist/style.css"
   },
   "files": [
     "dist",
     "package.json",
     "LICENSE",
-    "README.md"
+    "README.md",
+    "CHANGELOG.md"
   ],
   "sideEffects": [
     "*.css",
