--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "package.json",
     "LICENSE",
     "README.md",
-    "CHANGELOG.md"
+    "CHANGELOG.md",
+    "src/VirtualSwiper.scss"
   ],
   "sideEffects": [
     "*.css",
