--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
   ],
   "sideEffects": [
     "*.css",
-    "*.scss",
-    "./dist/index.mjs",
-    "./dist/index.cjs"
+    "*.scss"
   ],
   "keywords": [
     "taro",
@@ -104,7 +102,8 @@
     "terser": "^5.30.4",
     "typescript": "^5.4.5",
     "vite": "^4.2.0",
-    "vite-plugin-dts": "^3.9.0"
+    "vite-plugin-dts": "^3.9.0",
+    "vite-plugin-lib-inject-css": "^2.2.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.24.4"
